// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders style when isFocused=false, isDragAccept=false, isDragReject=false 1`] = `
{
  "alignItems": "center",
  "backgroundColor": "#fafafa",
  "borderColor": "#eeeeee",
  "borderRadius": 2,
  "borderStyle": "dashed",
  "borderWidth": 2,
  "color": "#bdbdbd",
  "cursor": "pointer",
  "display": "flex",
  "flex": 1,
  "flexDirection": "column",
  "outline": "none",
  "padding": "20px",
  "transition": "border .24s ease-in-out",
}
`;

exports[`renders style when isFocused=false, isDragAccept=false, isDragReject=true 1`] = `
{
  "alignItems": "center",
  "backgroundColor": "#fafafa",
  "borderColor": "#ff1744",
  "borderRadius": 2,
  "borderStyle": "dashed",
  "borderWidth": 2,
  "color": "#bdbdbd",
  "cursor": "pointer",
  "display": "flex",
  "flex": 1,
  "flexDirection": "column",
  "outline": "none",
  "padding": "20px",
  "transition": "border .24s ease-in-out",
}
`;

exports[`renders style when isFocused=false, isDragAccept=true, isDragReject=false 1`] = `
{
  "alignItems": "center",
  "backgroundColor": "#fafafa",
  "borderColor": "#00e676",
  "borderRadius": 2,
  "borderStyle": "dashed",
  "borderWidth": 2,
  "color": "#bdbdbd",
  "cursor": "pointer",
  "display": "flex",
  "flex": 1,
  "flexDirection": "column",
  "outline": "none",
  "padding": "20px",
  "transition": "border .24s ease-in-out",
}
`;

exports[`renders style when isFocused=true, isDragAccept=false, isDragReject=false 1`] = `
{
  "alignItems": "center",
  "backgroundColor": "#fafafa",
  "borderColor": "#2196f3",
  "borderRadius": 2,
  "borderStyle": "dashed",
  "borderWidth": 2,
  "color": "#bdbdbd",
  "cursor": "pointer",
  "display": "flex",
  "flex": 1,
  "flexDirection": "column",
  "outline": "none",
  "padding": "20px",
  "transition": "border .24s ease-in-out",
}
`;
